tests/return_new/__snapshots__/jsfmt.spec.js.snap
exports[`test test.js 1`] = `
"function Foo() { return {}; }
var foo: number = new Foo(); // error (returns object literal above)

function Bar() { return 0; }
var bar: number = new Bar(); // error (returns new object)

function Qux() { }
var qux: number = new Qux(); // error (returns new object)

class A { }
function B() { return new A(); }
var a: A = new B(); // OK (returns new A)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function Foo() {
  return {};
}
var foo: number = new Foo();// error (returns object literal above)
function Bar() {
  return 0;
}
var bar: number = new Bar();// error (returns new object)
function Qux() {
  
}
var qux: number = new Qux();// error (returns new object)
class A {}
function B() {
  return new A();
}
var a: A = new B();// OK (returns new A)

"
`;

exports[`test test2.js 1`] = `
"declare class D {
  constructor(): { x: number }; // OK
  y: any;
}

var d = new D();
d.x = \"\"; // error, string ~/~ number (but property x is found)

(new D: D); // error, new D is an object, D not in proto chain

module.exports = D;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1348
        fromString(\", \").join(path.map(print, \"params\")),
                         ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1348:26)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1452:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;
